# npp-googlekeep-sync

./: API_USAGE.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build-arm64.bat  resource.h  resource.rc
.github/workflows/: build-arm64.yml
config/: GoogleKeepSync.sample.ini
gkeep_bridge/: PythonBridge.cpp  PythonBridge.h  PythonBridge_simple.cpp  README.md  keep_bridge.py
include/: ConfigDialog.h  GoogleKeepAPI.h  GoogleKeepBridge.h  PluginCore.h  PluginInterface.h
src/: ConfigDialog.cpp  DllMain.cpp  GoogleKeepClient.cpp  OAuthManager.cpp  PluginCore.cpp  PluginCore_updated.cpp  WinHttpClient.cpp
test/: test_sync.ps1
